--- a/index.html
+++ b/index.html
@@ -5,81 +5,99 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="src/style.min.css">
+  <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Karla:400,700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Insure landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  How we work
-  Blog
-  Account
-  View plans
+<header>
+  <img src="images/logo.svg" alt="inure logo" class="logo">
+  <nav class="header-nav">
+    <span class="header-nav__link">How we work</span>
+    <span class="header-nav__link">Blog</span>
+    <span class="header-nav__link">Account</span>
+    <button>View plans</button>
+  </nav>
+</header>
+<section class="first-screen">
+  <h1 class="fist-screen__title">Humanizing your insurance.</h1>
+  <p class="fist-screen__desk">Get your life insurance coverage easier and faster. We blend our expertise
+  and technology to help you find the plan that’s right for you. Ensure you
+  and your loved ones are protected.</p>
+  <button class="fist-screen__call-to-action">View plans</button>
+  <img class="hero" src="images/image-intro-mobile.jpg">
+</section>
+<section class="different">
+  <h2 class="different__title">We’re different</h2>
+  <div class="different__block">
+    <img class="different__block__image" src="images/icon-snappy-process.svg" alt="icon snappy process">
+    <h3 class="different__block__title">Snappy Process</h3>
+    <p class="different__block__desc">Our application process can be completed in minutes, not hours. Don’t get
+    stuck filling in tedious forms.</p>
+  </div>
+  <div class="different__block">
+    <img class="different__block__image" src="images/icon-affordable-prices.svg" alt="icon affordable prices">
+    <h3 class="different__block__title">Affordable Prices</h3>
+    <p class="different__block__desc">We don’t want you worrying about high monthly costs. Our prices may be low,
+    but we still offer the best coverage possible.</p>
+  </div>
+  <div class="different__block">
+    <img class="different__block__image" src="images/icon-people-firs.svg" alt="icon people first">
+    <h3 class="different__block__title">People First</h3>
+    <p class="different__block__desc">Our plans aren’t full of conditions and clauses to prevent payouts. We make
+    sure you’re covered when you need it.</p>
+  </div>
+</section>
 
-  Humanizing your insurance.
+<section class="banner">
+  <h2 class="banner__title">Find out more about how we work</h2>
+  <button class="banner_call-to-action">How we work</button>
+</section>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
+<footer class="footer">
+  <nav class="footer__nav">
+    <img src="images/logo.svg" alt="inure logo" class="logo">
+    <div class="footer__social">
+      <img src="images/icon-facebook.svg" alt="facebook icon">
+      <img src="images/icon-twitter.svg" alt="twitter icon">
+      <img src="images/icon-pinterest.svg" alt="pinterest icon">
+      <img src="images/icon-instagram.svg" alt="instagram icon">
+    </div>
+    <section class="footer__links">
+      <div class="block">
+        <p class="block__title">Our company</p>
+        <p>How we work</p>
+        <p>Why Insure?</p>
+        <p>View plans</p>
+        <p>Reviews</p>
+      </div>
+      <div class="block">
+        <p class="block__title">Help me</p>
+        <p>FAQ</p>
+        <p>Terms of use</p>
+        <p>Privacy policy</p>
+        <p>Cookies</p>
+      </div>
+      <div class="block">
+        <p class="block__title">Contact</p>
+        <p>Sales</p>
+        <p>Support</p>
+        <p>Live chat</p>
+      </div>
+      <div class="block">
+        <p class="block__title">Others</p>
+        <p>Careers</p>
+        <p>Press</p>
+        <p>Licenses</p>
+      </div>
+    </section>
+  </nav>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+</footer>
 </body>
 </html>
