--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
 <header>
   <img src="images/logo.svg" alt="inure logo" class="logo">
   <nav class="header-nav">
-    <span class="header-nav__link">How we work</span>
-    <span class="header-nav__link">Blog</span>
-    <span class="header-nav__link">Account</span>
-    <button>View plans</button>
+    <a href="#" class="header-nav__link">How we work</a>
+    <a href="#" class="header-nav__link">Blog</a>
+    <a href="#" class="header-nav__link">Account</a>
+    <button class="header-nav__call-to-action">View plans</button>
   </nav>
 </header>
 <section class="first-screen">
-  <h1 class="fist-screen__title">Humanizing your insurance.</h1>
-  <p class="fist-screen__desk">Get your life insurance coverage easier and faster. We blend our expertise
-  and technology to help you find the plan that’s right for you. Ensure you
-  and your loved ones are protected.</p>
-  <button class="fist-screen__call-to-action">View plans</button>
-  <img class="hero" src="images/image-intro-mobile.jpg">
+
+  <div class="intro">
+    <h1 class="intro__title">Humanizing<br> your insurance.</h1>
+    <p class="intro__desc">Get your life insurance coverage easier and faster. We blend our expertise
+    and technology to help you find the plan that’s right for you. Ensure you
+    and your loved ones are protected.</p>
+    <button class="intro__call-to-action">View plans</button>
+  </div>
+  <img class="first-screen__hero" alt="family holding hands" src="images/image-intro-mobile.jpg">
 </section>
 <section class="different">
   <h2 class="different__title">We’re different</h2>
